
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int AES_KEY ;


 int AES_ofb128_encrypt (unsigned char*,unsigned char*,int,int *,unsigned char*,int*) ;
 int AES_set_encrypt_key (unsigned char*,int,int *) ;
 unsigned char* calloc (int,int) ;
 int memcpy (unsigned char*,unsigned char*,int) ;

unsigned char *
aes_ofb_decrypt(unsigned char * enc, int length, unsigned char * key, unsigned char * iv)
{
        unsigned char * outbuf= calloc(1,length);
        int num = 0;

        unsigned char liv[16];

        memcpy(liv,iv,16);

        AES_KEY aeskey;


        AES_set_encrypt_key(key, 256, &aeskey);

        AES_ofb128_encrypt(enc, outbuf, length, &aeskey, liv, &num);

        return outbuf;
}
