; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_38668.c_aes_ofb_decrypt.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_38668.c_aes_ofb_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @aes_ofb_decrypt(i8* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca [16 x i8], align 16
  %12 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i8* @calloc(i32 1, i32 %13)
  store i8* %14, i8** %9, align 8
  store i32 0, i32* %10, align 4
  %15 = getelementptr inbounds [16 x i8], [16 x i8]* %11, i64 0, i64 0
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @memcpy(i8* %15, i8* %16, i32 16)
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @AES_set_encrypt_key(i8* %18, i32 256, i32* %12)
  %20 = load i8*, i8** %5, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = load i32, i32* %6, align 4
  %23 = getelementptr inbounds [16 x i8], [16 x i8]* %11, i64 0, i64 0
  %24 = call i32 @AES_ofb128_encrypt(i8* %20, i8* %21, i32 %22, i32* %12, i8* %23, i32* %10)
  %25 = load i8*, i8** %9, align 8
  ret i8* %25
}

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @AES_set_encrypt_key(i8*, i32, i32*) #1

declare dso_local i32 @AES_ofb128_encrypt(i8*, i8*, i32, i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
